@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove obsolete fields.
+ common/loader.l
+ include/attack.h
+Nicolas Weeger 2007-05-13
+
 server/skill_util.c: fix wrong 'skills' display when no god is whoreshipped.
 Nicolas Weeger 2007-05-10
 
